[package]
name = "media-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
warp = "0.3"
bytes = "1.0"
futures = "0.3"
base64 = "0.21"